--- a/SnakeSolution/SnakeGame.Console/SnakeGame.Console.csproj
+++ b/SnakeSolution/SnakeGame.Console/SnakeGame.Console.csproj
@@ -7,4 +7,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\SnakeGame\SnakeGame.csproj" />
+    </ItemGroup>
+
 </Project>
